--- a/themes/wwcomps/front-page.html
+++ b/themes/wwcomps/front-page.html
@@ -257,173 +257,207 @@
 
 
 <section class="lucky-winner-banner page-banner-section">
-  <div class="banner-bg lucky-winner-banner-bg">
-    <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/hit-bnr-page-lft-img.jpg')"></div>
-    <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/lucky-winner-banner-bg-right-img.jpg')"></div>
-  </div>
+  <div class="lw-bnr-slider lwBnrSlider">
 
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="lucky-winner-desc-cntlr">
-          <div class="lucky-winner-slider luckyWinnerSlider">
-
-            <div class="lw-slide-item-cntlr">
-              <div class="lw-slide-item-desc">
-                <i><img src="assets/images/white-angle-right.png" alt=""></i>
-                <h2 class="lw-slide-item-title fl-h2">ONE LUCKY WINNER HAS 
-                <span>THE CHANCE TO WIN THIS...</span></h2>
-                <h3 class="lw-slide-item-sub-title fl-h2">XBOX SERIES X</h3>
-                <p>An XBOX Series X and have it delivered before Xmas!<br>
-                Win the most exciting gift this Christmas for a fraction of the price.</p>
-                <div class="lw-si-prize-cntlr">
-                  <strong>TICKET PRICE: </strong>
-                  <span class="price">
-                    <span class="woocommerce-Price-amount amount">
-                      <bdi>
-                        <span class="woocommerce-Price-currencySymbol"> £</span>19.99
-                      </bdi>
-                    </span>
-                    <del><span class="woocommerce-Price-currencySymbol">£</span>5.99</del>
-                  </span>
-                </div>
-                <div class="lw-si-btn">
-                  <a class="fl-btn" href="#">ENTER NOW</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="lw-slide-item-cntlr">
-              <div class="lw-slide-item-desc">
-                <i><img src="assets/images/white-angle-right.png" alt=""></i>
-                <h2 class="lw-slide-item-title fl-h2">ONE LUCKY WINNER HAS 
-                <span>THE CHANCE TO WIN THIS...</span></h2>
-                <h3 class="lw-slide-item-sub-title fl-h2">XBOX SERIES X</h3>
-                <p>An XBOX Series X and have it delivered before Xmas!<br>
-                Win the most exciting gift this Christmas for a fraction of the price.</p>
-                <div class="lw-si-prize-cntlr">
-                  <strong>TICKET PRICE: </strong>
-                  <span class="price">
-                    <span class="woocommerce-Price-amount amount">
-                      <bdi>
-                        <span class="woocommerce-Price-currencySymbol"> £</span>19.99
-                      </bdi>
-                    </span>
-                    <del><span class="woocommerce-Price-currencySymbol">£</span>5.99</del>
-                  </span>
-                </div>
-                <div class="lw-si-btn">
-                  <a class="fl-btn" href="#">ENTER NOW</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="lw-slide-item-cntlr">
-              <div class="lw-slide-item-desc">
-                <i><img src="assets/images/white-angle-right.png" alt=""></i>
-                <h2 class="lw-slide-item-title fl-h2">ONE LUCKY WINNER HAS 
-                <span>THE CHANCE TO WIN THIS...</span></h2>
-                <h3 class="lw-slide-item-sub-title fl-h2">XBOX SERIES X</h3>
-                <p>An XBOX Series X and have it delivered before Xmas!<br>
-                Win the most exciting gift this Christmas for a fraction of the price.</p>
-                <div class="lw-si-prize-cntlr">
-                  <strong>TICKET PRICE: </strong>
-                  <span class="price">
-                    <span class="woocommerce-Price-amount amount">
-                      <bdi>
-                        <span class="woocommerce-Price-currencySymbol"> £</span>19.99
-                      </bdi>
-                    </span>
-                    <del><span class="woocommerce-Price-currencySymbol">£</span>5.99</del>
-                  </span>
-                </div>
-                <div class="lw-si-btn">
-                  <a class="fl-btn" href="#">ENTER NOW</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="lw-slide-item-cntlr">
-              <div class="lw-slide-item-desc">
-                <i><img src="assets/images/white-angle-right.png" alt=""></i>
-                <h2 class="lw-slide-item-title fl-h2">ONE LUCKY WINNER HAS 
-                <span>THE CHANCE TO WIN THIS...</span></h2>
-                <h3 class="lw-slide-item-sub-title fl-h2">XBOX SERIES X</h3>
-                <p>An XBOX Series X and have it delivered before Xmas!<br>
-                Win the most exciting gift this Christmas for a fraction of the price.</p>
-                <div class="lw-si-prize-cntlr">
-                  <strong>TICKET PRICE: </strong>
-                  <span class="price">
-                    <span class="woocommerce-Price-amount amount">
-                      <bdi>
-                        <span class="woocommerce-Price-currencySymbol"> £</span>19.99
-                      </bdi>
-                    </span>
-                    <del><span class="woocommerce-Price-currencySymbol">£</span>5.99</del>
-                  </span>
-                </div>
-                <div class="lw-si-btn">
-                  <a class="fl-btn" href="#">ENTER NOW</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="lw-slide-item-cntlr">
-              <div class="lw-slide-item-desc">
-                <i><img src="assets/images/white-angle-right.png" alt=""></i>
-                <h2 class="lw-slide-item-title fl-h2">ONE LUCKY WINNER HAS 
-                <span>THE CHANCE TO WIN THIS...</span></h2>
-                <h3 class="lw-slide-item-sub-title fl-h2">XBOX SERIES X</h3>
-                <p>An XBOX Series X and have it delivered before Xmas!<br>
-                Win the most exciting gift this Christmas for a fraction of the price.</p>
-                <div class="lw-si-prize-cntlr">
-                  <strong>TICKET PRICE: </strong>
-                  <span class="price">
-                    <span class="woocommerce-Price-amount amount">
-                      <bdi>
-                        <span class="woocommerce-Price-currencySymbol"> £</span>19.99
-                      </bdi>
-                    </span>
-                    <del><span class="woocommerce-Price-currencySymbol">£</span>5.99</del>
-                  </span>
-                </div>
-                <div class="lw-si-btn">
-                  <a class="fl-btn" href="#">ENTER NOW</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="lw-slide-item-cntlr">
-              <div class="lw-slide-item-desc">
-                <i><img src="assets/images/white-angle-right.png" alt=""></i>
-                <h2 class="lw-slide-item-title fl-h2">ONE LUCKY WINNER HAS 
-                <span>THE CHANCE TO WIN THIS...</span></h2>
-                <h3 class="lw-slide-item-sub-title fl-h2">XBOX SERIES X</h3>
-                <p>An XBOX Series X and have it delivered before Xmas!<br>
-                Win the most exciting gift this Christmas for a fraction of the price.</p>
-                <div class="lw-si-prize-cntlr">
-                  <strong>TICKET PRICE: </strong>
-                  <span class="price">
-                    <span class="woocommerce-Price-amount amount">
-                      <bdi>
-                        <span class="woocommerce-Price-currencySymbol"> £</span>19.99
-                      </bdi>
-                    </span>
-                    <del><span class="woocommerce-Price-currencySymbol">£</span>5.99</del>
-                  </span>
-                </div>
-                <div class="lw-si-btn">
-                  <a class="fl-btn" href="#">ENTER NOW</a>
-                </div>
-              </div>
-            </div>
-
-
-
-          </div>
+    <div class="lw-bnr-item-cntlr">
+      <div class="lw-bnr-item">
+        <div class="banner-bg lucky-winner-banner-bg">
+          <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/hit-bnr-page-lft-img.jpg')"></div>
+          <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/lucky-winner-banner-bg-right-img.jpg')"></div>
         </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="lucky-winner-desc-cntlr">
+                <div class="lw-slide-item-desc">
+                  <i><img src="assets/images/white-angle-right.png" alt=""></i>
+                  <h2 class="lw-slide-item-title fl-h2">ONE LUCKY WINNER HAS 
+                    <span>THE CHANCE TO WIN THIS...</span></h2>
+                    <h3 class="lw-slide-item-sub-title fl-h2">XBOX SERIES X</h3>
+                    <p>An XBOX Series X and have it delivered before Xmas!<br>
+                    Win the most exciting gift this Christmas for a fraction of the price.</p>
+                    <div class="lw-si-prize-cntlr">
+                      <strong>TICKET PRICE: </strong>
+                      <span class="price">
+                        <span class="woocommerce-Price-amount amount">
+                          <bdi>
+                            <span class="woocommerce-Price-currencySymbol"> £</span>19.99
+                          </bdi>
+                        </span>
+                        <del><span class="woocommerce-Price-currencySymbol">£</span>5.99</del>
+                      </span>
+                    </div>
+                    <div class="lw-si-btn">
+                      <a class="fl-btn" href="#">ENTER NOW</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
       </div>
     </div>
+
+
+    <div class="lw-bnr-item-cntlr">
+      <div class="lw-bnr-item">
+        <div class="banner-bg lucky-winner-banner-bg">
+          <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/hit-bnr-page-lft-img.jpg')"></div>
+          <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/ab-bnr-page-rgt-img.jpg')"></div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="lucky-winner-desc-cntlr">
+                <div class="lw-slide-item-desc">
+                  <i><img src="assets/images/white-angle-right.png" alt=""></i>
+                  <h2 class="lw-slide-item-title fl-h2">ONE LUCKY WINNER HAS 
+                    <span>THE CHANCE TO WIN THIS...</span></h2>
+                    <h3 class="lw-slide-item-sub-title fl-h2">XBOX SERIES X</h3>
+                    <p>An XBOX Series X and have it delivered before Xmas!<br>
+                    Win the most exciting gift this Christmas for a fraction of the price.</p>
+                    <div class="lw-si-prize-cntlr">
+                      <strong>TICKET PRICE: </strong>
+                      <span class="price">
+                        <span class="woocommerce-Price-amount amount">
+                          <bdi>
+                            <span class="woocommerce-Price-currencySymbol"> £</span>19.99
+                          </bdi>
+                        </span>
+                        <del><span class="woocommerce-Price-currencySymbol">£</span>5.99</del>
+                      </span>
+                    </div>
+                    <div class="lw-si-btn">
+                      <a class="fl-btn" href="#">ENTER NOW</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
+    </div>
+
+
+    <div class="lw-bnr-item-cntlr">
+      <div class="lw-bnr-item">
+        <div class="banner-bg lucky-winner-banner-bg">
+          <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/hit-bnr-page-lft-img.jpg')"></div>
+          <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/winner-hm--Img-02.jpg')"></div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="lucky-winner-desc-cntlr">
+                <div class="lw-slide-item-desc">
+                  <i><img src="assets/images/white-angle-right.png" alt=""></i>
+                  <h2 class="lw-slide-item-title fl-h2">ONE LUCKY WINNER HAS 
+                    <span>THE CHANCE TO WIN THIS...</span></h2>
+                    <h3 class="lw-slide-item-sub-title fl-h2">XBOX SERIES X</h3>
+                    <p>An XBOX Series X and have it delivered before Xmas!<br>
+                    Win the most exciting gift this Christmas for a fraction of the price.</p>
+                    <div class="lw-si-prize-cntlr">
+                      <strong>TICKET PRICE: </strong>
+                      <span class="price">
+                        <span class="woocommerce-Price-amount amount">
+                          <bdi>
+                            <span class="woocommerce-Price-currencySymbol"> £</span>19.99
+                          </bdi>
+                        </span>
+                        <del><span class="woocommerce-Price-currencySymbol">£</span>5.99</del>
+                      </span>
+                    </div>
+                    <div class="lw-si-btn">
+                      <a class="fl-btn" href="#">ENTER NOW</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
+    </div>
+
+
+    <div class="lw-bnr-item-cntlr">
+      <div class="lw-bnr-item">
+        <div class="banner-bg lucky-winner-banner-bg">
+          <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/hit-bnr-page-lft-img.jpg')"></div>
+          <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/latest-compitions-img-02.jpg')"></div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="lucky-winner-desc-cntlr">
+                <div class="lw-slide-item-desc">
+                  <i><img src="assets/images/white-angle-right.png" alt=""></i>
+                  <h2 class="lw-slide-item-title fl-h2">ONE LUCKY WINNER HAS 
+                    <span>THE CHANCE TO WIN THIS...</span></h2>
+                    <h3 class="lw-slide-item-sub-title fl-h2">XBOX SERIES X</h3>
+                    <p>An XBOX Series X and have it delivered before Xmas!<br>
+                    Win the most exciting gift this Christmas for a fraction of the price.</p>
+                    <div class="lw-si-prize-cntlr">
+                      <strong>TICKET PRICE: </strong>
+                      <span class="price">
+                        <span class="woocommerce-Price-amount amount">
+                          <bdi>
+                            <span class="woocommerce-Price-currencySymbol"> £</span>19.99
+                          </bdi>
+                        </span>
+                        <del><span class="woocommerce-Price-currencySymbol">£</span>5.99</del>
+                      </span>
+                    </div>
+                    <div class="lw-si-btn">
+                      <a class="fl-btn" href="#">ENTER NOW</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
+    </div>
+
+
+    <div class="lw-bnr-item-cntlr">
+      <div class="lw-bnr-item">
+        <div class="banner-bg lucky-winner-banner-bg">
+          <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/hit-bnr-page-lft-img.jpg')"></div>
+          <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/gallery-grd-item-img-02.jpg')"></div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="lucky-winner-desc-cntlr">
+                <div class="lw-slide-item-desc">
+                  <i><img src="assets/images/white-angle-right.png" alt=""></i>
+                  <h2 class="lw-slide-item-title fl-h2">ONE LUCKY WINNER HAS 
+                    <span>THE CHANCE TO WIN THIS...</span></h2>
+                    <h3 class="lw-slide-item-sub-title fl-h2">XBOX SERIES X</h3>
+                    <p>An XBOX Series X and have it delivered before Xmas!<br>
+                    Win the most exciting gift this Christmas for a fraction of the price.</p>
+                    <div class="lw-si-prize-cntlr">
+                      <strong>TICKET PRICE: </strong>
+                      <span class="price">
+                        <span class="woocommerce-Price-amount amount">
+                          <bdi>
+                            <span class="woocommerce-Price-currencySymbol"> £</span>19.99
+                          </bdi>
+                        </span>
+                        <del><span class="woocommerce-Price-currencySymbol">£</span>5.99</del>
+                      </span>
+                    </div>
+                    <div class="lw-si-btn">
+                      <a class="fl-btn" href="#">ENTER NOW</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
+    </div>
+
   </div>
 </section>
 
