--- a/themes/wwcomps/front-page.html
+++ b/themes/wwcomps/front-page.html
@@ -271,8 +271,8 @@
               <div class="lucky-winner-desc-cntlr">
                 <div class="lw-slide-item-desc">
                   <i><img src="assets/images/white-angle-right.png" alt=""></i>
-                  <h2 class="lw-slide-item-title fl-h2">ONE LUCKY WINNER HAS 
-                    <span>THE CHANCE TO WIN THIS...</span></h2>
+                  <h2 class="lw-slide-item-title"><span class="fl-h2">ONE LUCKY WINNER HAS </span>
+                    THE CHANCE TO WIN THIS...</h2>
                     <h3 class="lw-slide-item-sub-title fl-h2">XBOX SERIES X</h3>
                     <p>An XBOX Series X and have it delivered before Xmas!<br>
                     Win the most exciting gift this Christmas for a fraction of the price.</p>
