--- a/themes/wwcomps/forest-projects.html
+++ b/themes/wwcomps/forest-projects.html
@@ -232,60 +232,83 @@
   </div>
 </section>
 
-<section class="lucky-winner-banner page-banner-section forest-proj-sec">
-  <div class="banner-bg lucky-winner-banner-bg">
-    <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/hit-bnr-page-lft-img.jpg')"></div>
-    <div class="banner-bg-rgt-cntlr">
-      <div class="lucky-winner-slider frstProjSlider">
-        <div class="lw-slide-item-rgt-cntlr">
-          <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/rstsn-projects-bnr-rt-img.jpg')"></div>
+<section class="page-banner-section forest-proj-sec">
+  
+  <div class="forest-proj-slider-cntlr">
+
+    <div class="forest-proj-slider frstProjSlider">
+
+       <div class="forest-proj-slide-item">
+          <div class="banner-bg">
+            <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/hit-bnr-page-lft-img.jpg')"></div>
+            <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/rstsn-projects-bnr-rt-img.jpg')"></div>
+          </div>
         </div>
-        <div class="lw-slide-item-rgt-cntlr">
-          <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/rstsn-projects-bnr-rt-img.jpg')"></div>
+
+        <div class="forest-proj-slide-item">
+          <div class="banner-bg">
+            <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/hit-bnr-page-lft-img.jpg')"></div>
+            <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/rstsn-projects-bnr-rt-img.jpg')"></div>
+          </div>
         </div>
-        <div class="lw-slide-item-rgt-cntlr">
-          <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/rstsn-projects-bnr-rt-img.jpg')"></div>
+
+        <div class="forest-proj-slide-item">
+          <div class="banner-bg">
+            <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/hit-bnr-page-lft-img.jpg')"></div>
+            <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/rstsn-projects-bnr-rt-img.jpg')"></div>
+          </div>
         </div>
-        <div class="lw-slide-item-rgt-cntlr">
-          <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/rstsn-projects-bnr-rt-img.jpg')"></div>
+
+        <div class="forest-proj-slide-item">
+          <div class="banner-bg">
+            <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/hit-bnr-page-lft-img.jpg')"></div>
+            <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/rstsn-projects-bnr-rt-img.jpg')"></div>
+          </div>
         </div>
-        <div class="lw-slide-item-rgt-cntlr">
-          <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/rstsn-projects-bnr-rt-img.jpg')"></div>
+
+        <div class="forest-proj-slide-item">
+          <div class="banner-bg">
+            <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/hit-bnr-page-lft-img.jpg')"></div>
+            <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/rstsn-projects-bnr-rt-img.jpg')"></div>
+          </div>
         </div>
-      </div>
+
     </div>
+
   </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="lucky-winner-desc-cntlr">
-          <div class="lw-slide-item-desc forest-proj-slide-item-des">
-            <i><img src="assets/images/white-angle-right.png" alt=""></i>
-            <h2 class="lw-slide-item-title">ALL OUR COMPETITION PROFITS,
-            <span>GO TO FOREST RESTORATION.</span></h2>
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam non nunc eget lectus consectetur pharetra non in dolor. Phasellus tortor mi, imperdiet porta gravida commodo est id,  iaculis lectus. Sed pretium blandit felis, id tincidunt purus feugiat eu. Nunc id orci porta, iaculis. <br>
-            Win the most exciting gift this Christmas for a fraction of the price.</p>
-            <div class="counter-up-cntlr">
-              <span><img src="assets/images/fp-angel-img.png" alt=""></span>
-              <ul class="reset-list">
 
-                <li>
-                  <div class="counter-item">
-                    <div class="counter-item-img"><img src="assets/images/frst-proj-img1.png" alt=""></div>
-                    <strong class="number-of-counter">£<span>166</span>k</strong>
-                    <h6 class="counter-item-sub-title">MONEY RAISED</h6>
-                  </div>
-                </li>
+  <div class="forest-proj-slider-content">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="lucky-winner-desc-cntlr">
+            <div class="lw-slide-item-desc forest-proj-slide-item-des">
+              <i><img src="assets/images/forest-proj-angle.png" alt=""></i>
+              <h2 class="lw-slide-item-title">ALL OUR COMPETITION PROFITS,
+              <span>GO TO FOREST RESTORATION.</span></h2>
+               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam non nunc eget lectus consectetur pharetra non in dolor. Phasellus tortor mi, imperdiet porta gravida commodo est id,  iaculis lectus. Sed pretium blandit felis, id tincidunt purus feugiat eu. Nunc id orci porta, iaculis. </p>
+              <div class="counter-up-cntlr">
+                <span><img src="assets/images/fp-angel-img.png" alt=""></span>
+                <ul class="reset-list">
 
-                <li>
-                  <div class="counter-item">
-                    <div class="counter-item-img"><img src="assets/images/frst-proj-img2.png" alt=""></div>
-                    <strong class="number-of-counter"><span>4421</span>+</strong>
-                    <h6 class="counter-item-sub-title">TREES PLANTED</h6>
-                  </div>
-                </li>
+                  <li>
+                    <div class="counter-item">
+                      <div class="counter-item-img"><img src="assets/images/frst-proj-img1.png" alt=""></div>
+                      <strong class="number-of-counter">£<span>166</span>k</strong>
+                      <h6 class="counter-item-sub-title">MONEY RAISED</h6>
+                    </div>
+                  </li>
 
-              </ul>
+                  <li>
+                    <div class="counter-item">
+                      <div class="counter-item-img"><img src="assets/images/frst-proj-img2.png" alt=""></div>
+                      <strong class="number-of-counter"><span>4421</span>+</strong>
+                      <h6 class="counter-item-sub-title">TREES PLANTED</h6>
+                    </div>
+                  </li>
+
+                </ul>
+              </div>
             </div>
           </div>
         </div>
