--- a/themes/wwcomps/winner.html
+++ b/themes/wwcomps/winner.html
@@ -233,12 +233,12 @@
               <li>
                 <div class="winr-grid-item product-grd-item">
                   <div class="winr-fea-img-cntlr pro-fea-img-cntlr">
-                    <a class="overlay-link" href="#" data-toggle="modal" data-target="#exampleModal"></a>
+                    <a class="overlay-link" href="#" data-toggle="modal" data-target="#Modal-2"></a>
                     <div class="inline-bg" style="background: url(assets/images/wnr-img-1.jpg);"></div>
                   </div>
                   <div class="winr-grd-item-des product-grd-item-des mHc">
                     <div class="wgid-title-bar">
-                      <h3 class="fl-h6 pgid-title wgid-title"><a href="#" data-toggle="modal" data-target="#exampleModal">lg oled55cx5lb (2020) 4k tv</a></h3>
+                      <h3 class="fl-h6 pgid-title wgid-title"><a href="#" data-toggle="modal" data-target="#Modal-2">lg oled55cx5lb (2020) 4k tv</a></h3>
                     </div>
                     <div class="winr-grd-date">
                       <span>08/01/2021</span>
@@ -249,11 +249,11 @@
               <li>
                 <div class="winr-grid-item product-grd-item">
                   <div class="winr-fea-img-cntlr pro-fea-img-cntlr">
-                    <a class="overlay-link" href="#" data-toggle="modal" data-target="#exampleModal"></a>
+                    <a class="overlay-link" href="#" data-toggle="modal" data-target="#Modal-2"></a>
                     <div class="inline-bg" style="background: url(assets/images/wnr-img-2.jpg);"></div>
                   </div>
                   <div class="winr-grd-item-des product-grd-item-des mHc">
-                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#" data-toggle="modal" data-target="#exampleModal">bmw e92 m3 competition</a></h3>
+                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#" data-toggle="modal" data-target="#Modal-2">bmw e92 m3 competition</a></h3>
                     <div class="winr-grd-date">
                       <span>06/01/2021</span>
                     </div>
@@ -263,11 +263,11 @@
               <li>
                 <div class="winr-grid-item product-grd-item">
                   <div class="winr-fea-img-cntlr pro-fea-img-cntlr">
-                    <a class="overlay-link" href="#" data-toggle="modal" data-target="#exampleModal"></a>
+                    <a class="overlay-link" href="#" data-toggle="modal" data-target="#Modal-2"></a>
                     <div class="inline-bg" style="background: url(assets/images/wnr-img-3.jpg);"></div>
                   </div>
                   <div class="winr-grd-item-des product-grd-item-des mHc">
-                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#" data-toggle="modal" data-target="#exampleModal">£50,000 tax free cash</a></h3>
+                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#" data-toggle="modal" data-target="#Modal-2">£50,000 tax free cash</a></h3>
                     <div class="winr-grd-date">
                       <span>04/01/2021</span>
                     </div>
@@ -277,11 +277,11 @@
               <li>
                 <div class="winr-grid-item product-grd-item">
                   <div class="winr-fea-img-cntlr pro-fea-img-cntlr">
-                    <a class="overlay-link" href="#" data-toggle="modal" data-target="#exampleModal"></a>
+                    <a class="overlay-link" href="#" data-toggle="modal" data-target="#Modal-2"></a>
                     <div class="inline-bg" style="background: url(assets/images/wnr-img-4.jpg);"></div>
                   </div>
                   <div class="winr-grd-item-des product-grd-item-des mHc">
-                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#" data-toggle="modal" data-target="#exampleModal">playstation 5 bundale</a></h3>
+                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#" data-toggle="modal" data-target="#Modal-2">playstation 5 bundale</a></h3>
                     <div class="winr-grd-date">
                       <span>01/01/2021</span>
                     </div>
@@ -291,11 +291,11 @@
               <li>
                 <div class="winr-grid-item product-grd-item">
                   <div class="winr-fea-img-cntlr pro-fea-img-cntlr">
-                    <a class="overlay-link" href="#" data-toggle="modal" data-target="#exampleModal"></a>
+                    <a class="overlay-link" href="#" data-toggle="modal" data-target="#Modal-2"></a>
                     <div class="inline-bg" style="background: url(assets/images/wnr-img-5.jpg);"></div>
                   </div>
                   <div class="winr-grd-item-des product-grd-item-des mHc">
-                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#" data-toggle="modal" data-target="#exampleModal">eden project weekend</a></h3>
+                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#" data-toggle="modal" data-target="#Modal-2">eden project weekend</a></h3>
                     <div class="winr-grd-date">
                       <span>28/12/2020</span>
                     </div>
@@ -305,11 +305,11 @@
               <li>
                 <div class="winr-grid-item product-grd-item">
                   <div class="winr-fea-img-cntlr pro-fea-img-cntlr">
-                    <a class="overlay-link" href="#" data-toggle="modal" data-target="#exampleModal"></a>
+                    <a class="overlay-link" href="#" data-toggle="modal" data-target="#Modal-2"></a>
                     <div class="inline-bg" style="background: url(assets/images/wnr-img-6.jpg);"></div>
                   </div>
                   <div class="winr-grd-item-des product-grd-item-des mHc">
-                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#" data-toggle="modal" data-target="#exampleModal">volkswagen transporter<br> t6 kombi</a></h3>
+                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#" data-toggle="modal" data-target="#Modal-2">volkswagen transporter<br> t6 kombi</a></h3>
                     <div class="winr-grd-date">
                       <span>25/12/2020</span>
                     </div>
@@ -319,11 +319,11 @@
               <li>
                 <div class="winr-grid-item product-grd-item">
                   <div class="winr-fea-img-cntlr pro-fea-img-cntlr">
-                    <a class="overlay-link" href="#" data-toggle="modal" data-target="#exampleModal"></a>
+                    <a class="overlay-link" href="#" data-toggle="modal" data-target="#Modal-2"></a>
                     <div class="inline-bg" style="background: url(assets/images/wnr-img-7.jpg);"></div>
                   </div>
                   <div class="winr-grd-item-des product-grd-item-des mHc">
-                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#" data-toggle="modal" data-target="#exampleModal">rolex deepsea blue<br> limited edition</a></h3>
+                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#" data-toggle="modal" data-target="#Modal-2">rolex deepsea blue<br> limited edition</a></h3>
                     <div class="winr-grd-date">
                       <span>20/12/2020</span>
                     </div>
@@ -333,11 +333,11 @@
               <li>
                 <div class="winr-grid-item product-grd-item">
                   <div class="winr-fea-img-cntlr pro-fea-img-cntlr">
-                    <a class="overlay-link" href="#" data-toggle="modal" data-target="#exampleModal"></a>
+                    <a class="overlay-link" href="#" data-toggle="modal" data-target="#Modal-2"></a>
                     <div class="inline-bg" style="background: url(assets/images/wnr-img-8.jpg);"></div>
                   </div>
                   <div class="winr-grd-item-des product-grd-item-des mHc">
-                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#" data-toggle="modal" data-target="#exampleModal">go ape with 4 friends</a></h3>
+                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#" data-toggle="modal" data-target="#Modal-2">go ape with 4 friends</a></h3>
                     <div class="winr-grd-date">
                       <span>11/12/2020</span>
                     </div>
@@ -347,11 +347,11 @@
               <li>
                 <div class="winr-grid-item product-grd-item">
                   <div class="winr-fea-img-cntlr pro-fea-img-cntlr">
-                    <a class="overlay-link" href="#" data-toggle="modal" data-target="#exampleModal"></a>
+                    <a class="overlay-link" href="#" data-toggle="modal" data-target="#Modal-2"></a>
                     <div class="inline-bg" style="background: url(assets/images/wnr-img-9.jpg);"></div>
                   </div>
                   <div class="winr-grd-item-des product-grd-item-des mHc">
-                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#" data-toggle="modal" data-target="#exampleModal">xbox series x + £1000<br> tax free cash</a></h3>
+                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#" data-toggle="modal" data-target="#Modal-2">xbox series x + £1000<br> tax free cash</a></h3>
                     <div class="winr-grd-date">
                       <span>12/02/2020</span>
                     </div>
@@ -361,11 +361,11 @@
               <li>
                 <div class="winr-grid-item product-grd-item">
                   <div class="winr-fea-img-cntlr pro-fea-img-cntlr">
-                    <a class="overlay-link" href="#" data-toggle="modal" data-target="#exampleModal"></a>
+                    <a class="overlay-link" href="#" data-toggle="modal" data-target="#Modal-2"></a>
                     <div class="inline-bg" style="background: url(assets/images/wnr-img-10.jpg);"></div>
                   </div>
                   <div class="winr-grd-item-des product-grd-item-des mHc">
-                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#" data-toggle="modal" data-target="#exampleModal">axe throwing for two</a></h3>
+                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#" data-toggle="modal" data-target="#Modal-2">axe throwing for two</a></h3>
                     <div class="winr-grd-date">
                       <span>08/12/2020</span>
                     </div>
@@ -375,11 +375,11 @@
               <li>
                 <div class="winr-grid-item product-grd-item">
                   <div class="winr-fea-img-cntlr pro-fea-img-cntlr">
-                    <a class="overlay-link" href="#" data-toggle="modal" data-target="#exampleModal"></a>
+                    <a class="overlay-link" href="#" data-toggle="modal" data-target="#Modal-2"></a>
                     <div class="inline-bg" style="background: url(assets/images/wnr-img-11.jpg);"></div>
                   </div>
                   <div class="winr-grd-item-des product-grd-item-des mHc">
-                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#" data-toggle="modal" data-target="#exampleModal">vw caddy</a></h3>                  
+                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#" data-toggle="modal" data-target="#Modal-2">vw caddy</a></h3>                  
                     <div class="winr-grd-date">
                       <span>03/12/2020</span>
                     </div>
@@ -389,11 +389,11 @@
               <li>
                 <div class="winr-grid-item product-grd-item">
                   <div class="winr-fea-img-cntlr pro-fea-img-cntlr">
-                    <a class="overlay-link" href="#" data-toggle="modal" data-target="#exampleModal"></a>
+                    <a class="overlay-link" href="#" data-toggle="modal" data-target="#Modal-2"></a>
                     <div class="inline-bg" style="background: url(assets/images/wnr-img-12.jpg);"></div>
                   </div>
                   <div class="winr-grd-item-des product-grd-item-des mHc">
-                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#" data-toggle="modal" data-target="#exampleModal">jaguar f-type 3.0 v6<br> supercharged</a></h3>                   
+                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#" data-toggle="modal" data-target="#Modal-2">jaguar f-type 3.0 v6<br> supercharged</a></h3>                   
                     <div class="winr-grd-date">
                       <span>30/11/2020</span>
                     </div>
@@ -402,11 +402,11 @@
               </li>
             </ul>
             <!-- Modal -->
-            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby=" exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="Modal-2" tabindex="-1" role="dialog" aria-labelledby=" Modal-2Label" aria-hidden="true">
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h5 class="modal-title wgid-title-popup" id="exampleModalLabel">LG OLED55CX5LB (2020) 4K TV</h5>
+                    <h5 class="modal-title wgid-title-popup" id="Modal-2Label">LG OLED55CX5LB (2020) 4K TV</h5>
                   </div>
                   <div class="modal-body">
                     <i><img src="assets/images/popup-img.jpg" alt=""></i>
@@ -414,7 +414,7 @@
                       <p><span>This draw took place on Thursday 9th January,</span></p>       
                       <p>
                         <span>Congratulations to Nick Jeffrey with number</span>
-                        <a href="tel:6665">6665.</a>
+                        <strong href="tel:6665">6665.</strong>
                       </p>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla fringilla lobortis justo, ut gravida ligula. Sed auctor vehicula magna vel ultricies.</p> 
                     </div>
