--- a/themes/wwcomps/forest-projects.html
+++ b/themes/wwcomps/forest-projects.html
@@ -283,7 +283,10 @@
         <div class="col-md-12">
           <div class="lucky-winner-desc-cntlr">
             <div class="lw-slide-item-desc forest-proj-slide-item-des">
-              <i><img src="assets/images/forest-proj-angle.png" alt=""></i>
+              <i>
+                <img class="desktop" src="assets/images/forest-proj-angle.png" alt="">
+                <img class="mobile" src="assets/images/forest-project-res.png" alt="">
+              </i>
               <h2 class="lw-slide-item-title">ALL OUR COMPETITION PROFITS,
               <span>GO TO FOREST RESTORATION.</span></h2>
                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam non nunc eget lectus consectetur pharetra non in dolor. Phasellus tortor mi, imperdiet porta gravida commodo est id,  iaculis lectus. Sed pretium blandit felis, id tincidunt purus feugiat eu. Nunc id orci porta, iaculis. </p>
