--- a/themes/wwcomps/front-page.html
+++ b/themes/wwcomps/front-page.html
@@ -271,6 +271,7 @@
               <div class="lucky-winner-desc-cntlr">
                 <div class="lw-slide-item-desc">
                   <i><img src="assets/images/white-angle-right.png" alt=""></i>
+                  <span class="lw-slide-item-desc-top-arrow"><img src="assets/images/angle-rgt-white-res.png" alt=""></span>
                   <h2 class="lw-slide-item-title"><span class="fl-h2">ONE LUCKY WINNER HAS </span>
                     THE CHANCE TO WIN THIS...</h2>
                     <h3 class="lw-slide-item-sub-title fl-h2">XBOX SERIES X</h3>
