--- a/themes/wwcomps/winner.html
+++ b/themes/wwcomps/winner.html
@@ -90,6 +90,7 @@
 
 </head>
 <body>
+  <div class="bdoverlay"></div>
 <header class="header-warp">
   <div class="top-bar">
     <div class="container">
@@ -215,6 +216,44 @@
     </div>
   </div>
 </header>
+
+
+<div class="xs-mbl-menu-cntlr">
+  <div class="xs-mbl-menu-top-wrap">
+    <div class="xs-mbl-menu-top">
+      <div class="xs-mmt-logo">
+        <a href="#"><img src="assets/images/logo.svg" alt=""></a>
+      </div>
+      <div class="xs-mmt-close-icon">
+        <div class="close-icon humberger-icon">
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="xs-mbl-menu">
+    <nav class="main-nav">
+      <ul class="clearfix reset-list">
+        <li class="current-menu-item"><a href="#">latest competitions</a></li>
+        <li class="menu-item-has-children">
+          <a href="#">entry lists</a>
+          <ul class="sub-menu" style="">
+            <li><a href="#">Sub Menu</a></li>
+            <li><a href="#">Sub Menu</a></li>
+            <li><a href="#">Sub Menu</a></li>
+            <li><a href="#">Sub Menu</a></li>
+          </ul>
+        </li>
+        <li><a href="#">live draws</a></li>
+        <li><a href="#">winners</a></li>
+        <li><a href="#">forest projects</a></li>
+        <li><a href="#">how it</a></li>
+      </ul>
+    </nav>
+  </div>
+</div>
 
 <section class="winners-sec">
   <div class="fl-angle-hdr">
