--- a/themes/wwcomps/how-it-works.html
+++ b/themes/wwcomps/how-it-works.html
@@ -217,6 +217,44 @@
   </div>
 </header>
 
+
+<div class="xs-mbl-menu-cntlr">
+  <div class="xs-mbl-menu-top-wrap">
+    <div class="xs-mbl-menu-top">
+      <div class="xs-mmt-logo">
+        <a href="#"><img src="assets/images/logo.svg" alt=""></a>
+      </div>
+      <div class="xs-mmt-close-icon">
+        <div class="close-icon humberger-icon">
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="xs-mbl-menu">
+    <nav class="main-nav">
+      <ul class="clearfix reset-list">
+        <li class="current-menu-item"><a href="#">latest competitions</a></li>
+        <li class="menu-item-has-children">
+          <a href="#">entry lists</a>
+          <ul class="sub-menu" style="">
+            <li><a href="#">Sub Menu</a></li>
+            <li><a href="#">Sub Menu</a></li>
+            <li><a href="#">Sub Menu</a></li>
+            <li><a href="#">Sub Menu</a></li>
+          </ul>
+        </li>
+        <li><a href="#">live draws</a></li>
+        <li><a href="#">winners</a></li>
+        <li><a href="#">forest projects</a></li>
+        <li><a href="#">how it</a></li>
+      </ul>
+    </nav>
+  </div>
+</div>
+
 <section class="fl-angle-hdr-cntlr">
   <div class="fl-angle-hdr">
     <span class="fl-angle-hdr-join"></span>
