--- a/themes/wwcomps/front-page.html
+++ b/themes/wwcomps/front-page.html
@@ -792,11 +792,11 @@
              <div class="lates-winners-slider-filter">
                  <div class="filter-tabbar">
                   <ul class="filter reset-list">
-                    <li class="active"><a data-filter="all"  class="all" href="#">ALL</a></li>
-                    <li><a data-filter="cars" class="cars" href="#">CARS</a></li>
-                    <li><a data-filter="games" class="games" href="#">GAMES</a></li>
-                    <li><a data-filter="holiday" class="holiday" href="#">HOLIDAY</a></li>
-                    <li><a data-filter="tvs" class="tvs" href="#">TVS</a></li>
+                    <li class="active"><a value=".all" data-filter="all"  class="all" href="#">ALL</a></li>
+                    <li><a value=".cars" data-filter="cars" class="cars" href="#">CARS</a></li>
+                    <li><a value=".games" data-filter="games" class="games" href="#">GAMES</a></li>
+                    <li><a value=".holiday" data-filter="holiday" class="holiday" href="#">HOLIDAY</a></li>
+                    <li><a value=".tvs" data-filter="tvs" class="tvs" href="#">TVS</a></li>
                   </ul>
                 </div>
              </div>
@@ -804,7 +804,7 @@
           <div class="col-md-12">
             <div class="filter-slider-cntlr">
               <div class="winnersSlider">
-                <div class="winnersSlideItem">
+                <div class="winnersSlideItem cars">
                   <div class="winners-grd-item">
                     <div class="winners-grd-item-fea-img-cntlr">
                       <a class="overlay-link" href="#"></a>
@@ -816,7 +816,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="winnersSlideItem">
+                <div class="winnersSlideItem games">
                   <div class="winners-grd-item">
                     <div class="winners-grd-item-fea-img-cntlr">
                       <a class="overlay-link" href="#"></a>
@@ -828,7 +828,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="winnersSlideItem">
+                <div class="winnersSlideItem holiday">
                   <div class="winners-grd-item">
                     <div class="winners-grd-item-fea-img-cntlr">
                       <a class="overlay-link" href="#"></a>
@@ -840,7 +840,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="winnersSlideItem">
+                <div class="winnersSlideItem tvs">
                   <div class="winners-grd-item">
                     <div class="winners-grd-item-fea-img-cntlr">
                       <a class="overlay-link" href="#"></a>
@@ -852,7 +852,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="winnersSlideItem">
+                <div class="winnersSlideItem cars">
                   <div class="winners-grd-item">
                     <div class="winners-grd-item-fea-img-cntlr">
                       <a class="overlay-link" href="#"></a>
@@ -864,7 +864,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="winnersSlideItem">
+                <div class="winnersSlideItem games">
                   <div class="winners-grd-item">
                     <div class="winners-grd-item-fea-img-cntlr">
                       <a class="overlay-link" href="#"></a>
@@ -876,7 +876,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="winnersSlideItem">
+                <div class="winnersSlideItem holiday">
                   <div class="winners-grd-item">
                     <div class="winners-grd-item-fea-img-cntlr">
                       <a class="overlay-link" href="#"></a>
@@ -888,7 +888,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="winnersSlideItem">
+                <div class="winnersSlideItem tvs">
                   <div class="winners-grd-item">
                     <div class="winners-grd-item-fea-img-cntlr">
                       <a class="overlay-link" href="#"></a>
